# final-qualifying-work-by-gaitrakhmanov

./: .gitignore  LICENSE  docker-compose.yaml  nginx.conf
b/: .dockerignore  DockerFile  alembic.ini  main.py  prestart.sh  pyproject.toml  requirements.txt
b/actions/: create_administrator.py  create_moderator.py
b/alembic/versions/: 2025_05_05_1645-5dd2b21be86c_create_users_table.py  2025_05_05_1647-b122dd6f59b3_create_access_tokens_table.py  2025_05_07_1047-b2e56e1966a4_update_users_table.py  2025_05_17_1852-1827e750d459_create_form_and_form_submissions_update_.py  2025_06_02_1532-c9541a1a9074_add_table_collection_and_sections.py  2025_06_02_2040-355451e7666b_update_sections_table_add_user_id.py  2025_06_08_2138-76fecbc21508_add_division_collection_content_tables_.py  2025_06_09_1604-3e0338e78bd6_update_collections_and_coll_content.py  2025_06_12_1204-5470b8676455_update_section_table_delete_order.py
b/api/: __init__.py
b/api/api_v1/: __init__.py  auth.py  collection_contents.py  collections.py  divisions.py  forms.py  generation_pdf.py  messages.py  sections.py  users.py
b/api/dependencies/: collection.py  collection_content.py  division.py  form.py  section.py
b/core/: config.py
b/core/authentication/: transport.py  user_manager.py
b/core/crud/: collection.py  collection_content.py  division.py  form.py  generation_pdf.py  section.py
b/core/models/: __init__.py  access_token.py  base.py  collection.py  collection_content.py  db_helper.py  division.py  form.py  section.py  (+2 more)
b/utils/: __init__.py  data_converters.py  html_generate_form_elements.py
(+137 files in other folders)
