[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "marcel gaitrakhmanov",email = "marselkakeks@gmail.com"} ]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standart] (>=0.34.2,<0.35.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "orjson (>=3.10.16,<4.0.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "reportlab (>=3.6,<4.0) ; python_version >= \"3.8\" and python_version < \"3.13\"",
    "weasyprint (>=65.1,<66.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)" ]

[tool.poetry]
package-mode = false    

[tool.poetry.group.dev.dependencies]
python = "^3.13"
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
